--- a/app/src/main/res/layout/news_cards.xml
+++ b/app/src/main/res/layout/news_cards.xml
@@ -18,13 +18,23 @@
         <ImageView
             android:id="@+id/cards_image"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:contentDescription="@string/image_description"
             android:scaleType="centerInside"
             android:adjustViewBounds="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <Button
+            android:id="@+id/image_download_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:textAlignment="viewEnd"
+            app:icon="@drawable/ic_file_download_white_24dp"
+            app:layout_constraintEnd_toEndOf="@id/cards_image"
+            app:layout_constraintTop_toTopOf="@id/cards_image" />
 
         <TextView
             android:id="@+id/card_header"
