--- a/app/src/main/res/layout/news_cards.xml
+++ b/app/src/main/res/layout/news_cards.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:contentDescription="@string/image_description"
-            android:scaleType="centerInside"
+            android:scaleType="centerCrop"
             android:adjustViewBounds="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,8 @@
             android:ellipsize="end"
             android:letterSpacing="0.15"
             android:maxLines="2"
-            android:padding="6dp"
+            android:paddingHorizontal="12dp"
+            android:paddingVertical="6dp"
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@id/cards_image"
@@ -45,7 +46,8 @@
             android:id="@+id/card_subtitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="6dp"
+            android:paddingHorizontal="12dp"
+            android:paddingVertical="6dp"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="@id/card_header"
             app:layout_constraintStart_toStartOf="@id/card_header"
